# hslu_baa_ebkph_classifier

./: .gitattributes  .gitignore  README.md  Stoeckli_Lukas_Bericht ohne Signatur_BAA_FS26_Bsc AIML.typ  _glossary.typ  pyproject.toml
chapters/: BAA.bib  _examples.typ  _index.typ
chapters/1 problem/: _index.typ
chapters/2 research/: _index.typ
chapters/3 methods/: _index.typ
chapters/4 implementation/: _index.typ
chapters/5 evaluation/: _index.typ
chapters/6 outlook/: _index.typ
chapters/7 appendix/: _index.typ
code/: _settings.py  dataloader.py  dataviz_helper.py  ensemble_helper.py  env_helper.py  feedback_helper.py  geometric_extraction_helper.py  ml_models.py  models_helper.py  nn_models.py  run_demo.py  run_ensemble_model_prediction.py  wandb_helper.py
code/1_data_mapping/1_1_data_collection/: collecting_data.ipynb  collecting_labels.ipynb  ifc_data.parquet  label_data.parquet
code/1_data_mapping/1_2_data_mapping/: mapped_data.parquet  mapping_ifc_label_data.ipynb
code/6_deployment/: demo_feedback.ipynb
meetings/: meeting_01.typ  meeting_02.typ  meeting_03.typ  meeting_04.typ  meeting_05.typ  meeting_06_midterm.typ  meeting_07.typ  meeting_08.typ  meeting_09.typ
meetings/interviews/: interview_01.typ  interview_02.typ
setup_environ/: setup_environ_and_train_plain_nn.sh  setup_environ_and_train_rf.sh  setup_environ_and_train_xgboost.sh
template/: _abstract.typ  _cover.typ  _declaration.typ  _expression.typ  _helpers.typ  _meeting.typ  _scheduling.typ  template.typ
web_abstract/: Stoeckli_Lukas_Web Abstract_BAA_FS26_BSc AIML.docx
(+67 files in other folders)
